stylesheets/editor.css
body {
  font-size: 14px;
  font-family: arial, sans-serif;
}

#top {
  padding-bottom: 4px;
}
#left {
  padding: 2px;
  float: left;
}
#right {
  padding: 2px;
}

#controls {
  list-style: none;
  margin: 0px;
  padding: 0px;
}
#controls > li {
  display: inline;
  padding-right: 10px;
}
#controls > li:last-child {
  float: right;
}

#tile-list {
  width: 90px;
  border: 1px black solid;
  overflow: hidden;
  overflow-y: scroll;
  padding-left: 4px;
  padding-top: 4px;
}

#sprite-list {
  width: 100%;
  height: 60px;
  padding-left: 4px;
  padding-top: 4px;
  margin-right: 4px;
  border: 1px black solid;
  overflow: hidden;
  overflow-x: scroll;
}

.sprite {
  display: block;
  background-repeat: no-repeat;
  z-index: 100;
}

#map .sprite {
  position: absolute;
}

#sprite-list .sprite {
  float: left;
  margin: 2px;
}

.sprite.selected {
  border: 1px solid #F50;
  margin-left: -1px;
  margin-top: -1px;
}

.list-tile {
  width: 60px;
  height: 60px;
  background-color: #F0F;
  background-image: url(../assets/tiles.png);
  z-index: 5;
  margin: 2px;
}
.list-tile.selected {
  border: 2px solid #F50;
  margin: 0px;
}

.tile {
  background-position: 0px 0px;
  display: block;
}

.road-matcher {
  border: 1px red solid;
  z-index: 10;
  margin: -1px;
}

#map-mask {
  border: 1px solid black;
  top: 20px;
  overflow: hidden;
  /* float: right; */
  overflow-x: scroll;
  overflow-y: scroll;
  z-index: 10;
}

#map {
  width: 3840px;
  height:3840px;
  position:relative;
}

#map.show-grid .tile {
  border: 1px solid black;
}

#save {
  display: none;
}

#save-text {
  width: 500px;
  height: 500px;
}

#load {
  display: none;
}

.collidable {
  border: dotted red 2px;
}

#coord-display {
  display: none;
};

